p2ws_package/Devpp2ws-Package/objects/PAX_Flown_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <formula>IF(TEXT(Flight_Scheduling_Type__c)=&quot;Schedule&quot;,
TEXT(Flight_Area__c),
&quot;Non-Schedule&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Royal First</fullName>
                </value>
                <value>
                    <fullName>Royal Silk</fullName>
                </value>
                <value>
                    <fullName>Premium Economy</fullName>
                </value>
                <value>
                    <fullName>Economy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Date_Key__c</fullName>
        <externalId>true</externalId>
        <label>Data Date Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Data_Date__c</fullName>
        <label>Data Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Area__c</fullName>
        <label>Flight Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Indo-China</fullName>
                </value>
                <value>
                    <fullName>Western</fullName>
                </value>
                <value>
                    <fullName>Southern</fullName>
                </value>
                <value>
                    <fullName>Northern</fullName>
                </value>
                <value>
                    <fullName>Middle-East</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Region__c</fullName>
        <label>Flight Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Intercontinental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flight_Scheduling_Type__c</fullName>
        <label>Flight Scheduling Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Schedule</fullName>
                </value>
                <value>
                    <fullName>Non-Schedule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAX_Flown_Summary__c</fullName>
        <label>PAX Flown Summary</label>
        <referenceTo>PAX_Flown_Summary__c</referenceTo>
        <relationshipLabel>PAX Flown Detail</relationshipLabel>
        <relationshipName>PAX_Flown_Detail</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF(TEXT(Flight_Scheduling_Type__c)=&quot;Schedule&quot;,
TEXT(Flight_Region__c),
&quot;่Non-Schedule&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Passengers__c</fullName>
        <label>Total Passengers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PAX Flown Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PAX_Flown_Summary__c</columns>
        <columns>NAME</columns>
        <columns>Area__c</columns>
        <columns>Class__c</columns>
        <columns>Data_Date__c</columns>
        <columns>Data_Date_Key__c</columns>
        <columns>Flight_Area__c</columns>
        <columns>Flight_Region__c</columns>
        <columns>Flight_Scheduling_Type__c</columns>
        <columns>Region__c</columns>
        <columns>Total_Passengers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PXF-{00000}</displayFormat>
        <label>Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PAX Flown Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>